# fastapi-python

./: .coverage  app.py  models.py  pyproject.toml  test_db.py
tests/: conftest.py  test_app.py
