[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Silva",email = "marcos.da.silva.j@accenture.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
